# BitmapGraphicsOOP

./: CMakeLists.txt  main.cpp
BitmapImageApp/: BitmapImageApp.cpp  BitmapImageApp.h
Commands/: CommandDispatcher.cpp  CommandDispatcher.h
Commands/CommandTypes/: AddCommand.cpp  AddCommand.h  CloseCommand.cpp  CloseCommand.h  CollageCommand.cpp  CollageCommand.h  Command.cpp  Command.h  ErrorCommand.cpp  ErrorCommand.h  ExitCommand.cpp  ExitCommand.h  GrayscaleCommand.cpp  GrayscaleCommand.h  HelpCommand.cpp  HelpCommand.h  LoadCommand.cpp  LoadCommand.h  MonochromeCommand.cpp  MonochromeCommand.h  NegativeCommand.cpp  NegativeCommand.h  RotateCommand.cpp  RotateCommand.h  SaveAsCommand.cpp  SaveAsCommand.h  SaveCommand.cpp  SaveCommand.h  SessionInfoCommand.cpp  SessionInfoCommand.h  SwitchCommand.cpp  SwitchCommand.h  UndoCommand.cpp  UndoCommand.h
Images/: Image.cpp  Image.h  ImageCreator.cpp  ImageCreator.h  ImagePBM.cpp  ImagePBM.h  ImagePGM.cpp  ImagePGM.h  ImagePPM.cpp  ImagePPM.h
Images/Data/: MatrixOperations.cpp  MatrixOperations.h  PixelMatrix.cpp  PixelMatrix.h  RGBPixelData.cpp  RGBPixelData.h
SessionManager/: SessionManager.cpp  SessionManager.h
SessionManager/Session/: Session.cpp  Session.h
testfiles/: pbm1asci.pbm  pbm1bin.pbm  pbm2ascii.pbm  pbm2bin.pbm  pbm3bin.pbm  ppmasci.ppm
